# deckard

./: AGENTS.md  README.md  render.yaml
docs/notes/: opensource-notes.md  working-notes.md
docs/plan/: agent-orchestration.md  deckard-deep-research.md  plan.md  testing.md
server/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  sitecustomize.py
server/app/: __init__.py  config.py  main.py
server/app/ai_agents/: avatar_seed.py  coordinator.py  realtime_conversation.py  sentiment_classifying.py  transcribe_agent.py  web_search_agent.py
server/app/models/: schemas.py
server/app/routers/: realtime.py  sessions.py
server/app/services/: computer_use.py  did_talks.py  image_generation.py  orchestration.py  realtime_voice.py  stableavatar.py  supabase_persistence.py  transcription.py  web_search.py
server/app/static/: app.js  index.html
server/tests/: test_config_supabase.py  test_did_talks.py  test_placeholder.py  test_sentiment_classifying.py
web/: AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/api/jobs/: route.ts
web/src/app/api/profile/: route.ts
web/src/app/onboarding/: page.tsx
web/src/app/studio/: page.tsx
web/src/components/layout/: site-footer.tsx  site-header.tsx
web/src/components/providers/: supabase-provider.tsx
web/src/hooks/: use-supabase.ts
web/src/lib/supabase/: client.ts  queries.ts  server.ts  types.ts
web/supabase/migrations/: 0001_init.sql
web/tests/: background.spec.ts
